Fixed spacing of columns/rows - if overflow, can scroll with mouse

--- a/client/src/pages/ViewScenario.module.css
+++ b/client/src/pages/ViewScenario.module.css
@@ -54,6 +54,9 @@
     font-size: 1rem;
     background-color: #f8f8f8;
     color: #333;
+    overflow: auto;
+    white-space: nowrap;
+    scrollbar-width: none; 
 
 }
 
@@ -124,7 +127,7 @@
     grid-column-gap: 2rem;
     grid-row-gap: 0px;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     margin: 0.5rem;
 
 
